# flir_camera_driver

./: .gitignore  .travis.yml  README.md  depends.repos  spin-conf  url.txt
.circleci/: config.yml  (+1 more)
flir_camera_description/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
flir_camera_description/launch/: demo.launch.py
flir_camera_description/meshes/: flir_blackflys.stl
flir_camera_description/urdf/: demo.urdf.xacro  flir_blackfly_s.urdf.xacro  flir_blackflys.urdf.xacro
flir_camera_driver/: .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
flir_camera_driver/cfg/: Flir.cfg  PointGrey.cfg
flir_camera_driver/cmake/: DownloadSpinnaker.cmake  download_spinnaker
flir_camera_driver/config/: SFNC_GenTLDataStream_GigE_Version_1_0_0_Schema_1_1.xml  SFNC_GenTLDataStream_Usb3_Version_1_0_0_Schema_1_1.xml  SFNC_GenTLDevice_GigE_Version_1_0_0_Schema_1_1.xml  SFNC_GenTLDevice_Reference_Version_1_0_0_Schema_1_1.xml  SFNC_GenTLDevice_Usb3_Version_1_0_0_Schema_1_1.xml  SFNC_GenTLInterface_GigE_Version_1_0_0_Schema_1_1.xml  SFNC_GenTLInterface_Reference_Version_1_0_0_Schema_1_1.xml  SFNC_GenTLInterface_Usb3_Version_1_0_0_Schema_1_1.xml  camera.yaml  custom_rosconsole.config  left_camera.yaml  right.yaml  right_camera.yaml
flir_camera_driver/include/flir_camera_driver/: FlirCamera.h  camera.h  camera_exceptions.h  cm3.h  set_property.h
flir_camera_driver/include/pointgrey_camera_driver/: PointGreyCamera.h
flir_camera_driver/launch/: bumblebee.launch  camera.launch  stereo.launch  test_spinnaker.launch
flir_camera_driver/src/: FlirCamera.cpp  PointGreyCamera.cpp  camera.cpp  cm3.cpp  list_cameras.cpp  node.cpp  nodelet.cpp  spinnaker_test_node.cpp  stereo_node.cpp  stereo_nodelet.cpp
flir_camera_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
flir_camera_msgs/msg/: ImageMetaData.msg
flir_spinnaker_common/: CMakeLists.txt  README.md  package.xml
flir_spinnaker_common/cmake/: DownloadSpinnaker.cmake  FindSpinnaker.cmake
flir_spinnaker_common/include/flir_spinnaker_common/: driver.h  image.h  pixel_format.h
flir_spinnaker_common/src/: driver.cpp  driver_impl.cpp  driver_impl.h  genicam_utils.cpp  genicam_utils.h  image.cpp  pixel_format.cpp
flir_spinnaker_ros2/: .clang-format  CMakeLists.txt  findshared.sh.in  flir_spinnaker_ros2.rosinstall  package.xml
flir_spinnaker_ros2/.github/docker/: Dockerfile.focal_foxy_spinnaker  Dockerfile.focal_noetic_galactic  Dockerfile.focal_noetic_galactic_spinnaker  Dockerfile.jammy_humble_spinnaker  README.md  jammy_qt5-default-control.txt
flir_spinnaker_ros2/.github/scripts/: build_ros2.bash
flir_spinnaker_ros2/cmake/: DownloadSpinnaker.cmake
flir_spinnaker_ros2/config/: blackfly_s_gige.cfg  example.yaml
flir_spinnaker_ros2/launch/: blackfly_s.launch.py  blackfly_s_gige.launch.py  chameleon.launch.py  grasshopper.launch.py  grasshopper_with_exp_control.launch.py  stereo_synced.launch.py
flir_spinnaker_ros2/src/: camera_driver.cpp  camera_driver_node.cpp  logging.h
image_meta_msgs_ros2/: CMakeLists.txt  README.md  package.xml
image_meta_msgs_ros2/msg/: ImageMetaData.msg
spinnaker_camera_driver/: .clang-format  CHANGELOG.rst  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
spinnaker_camera_driver/cfg/: Flir.cfg  Spinnaker.cfg  SpinnakerBFS.cfg  rosconsole.conf
spinnaker_camera_driver/cmake/: DownloadSpinnaker.cmake  FindSPINNAKER.cmake  TargetArch.cmake  download_spinnaker  install_files  spinnaker_camera_driverConfig.cmake.in
spinnaker_camera_driver/config/: blackfly.yaml  blackfly_s.cfg  blackfly_s.yaml  chameleon.cfg  chameleon.yaml  custom_rosconsole.config  grasshopper.cfg  grasshopper.yaml  left.yaml  oryx.yaml
spinnaker_camera_driver/debian/: udev
spinnaker_camera_driver/docs/: camera_configuration_files.md  linux_setup_flir.md
spinnaker_camera_driver/image_numbered_msgs/: CMakeLists.txt  package.xml
spinnaker_camera_driver/launch/: blackfly_s.launch.py  blackfly_s_gige.launch.py  cam_imu.launch  camera.launch  camera_gige.launch  camera_sync.launch  chameleon.launch.py  diagnostics.launch  driver_node.launch.py  export_jpeg.launch  grasshopper.launch.py  grasshopper_with_exp_control.launch.py  ig_camera_F1.launch  ig_cameras.launch  kinetic_cam_poe.launch  kinetic_cam_poe_cam_0.launch  kinetic_cam_poe_cam_1.launch  kinetic_cam_poe_cam_pair.launch  kinetic_cam_poe_cam_pair_high_res.launch  kinetic_cam_usb.launch  kinetic_color.launch  kinetic_fisheye.launch  kinetic_mono.launch  kinetic_mtv_lidar_cam.launch  kinetic_mtv_stereo.launch  kinetic_mtv_target_cam.launch  kinetic_oc_stereo.launch  kinetic_stereo.launch  kinetic_stereo_disparity.launch  kinetic_stereo_test_rig.launch  kinetic_test_usb_cam.launch  kinetic_usb_camera.launch  stereo copy.launch  stereo.launch  stereo_independent_sync.launch  stereo_master_slave.launch.py  stereo_sync_node.launch  stereo_sync_nodelet.launch  stereo_synced.launch.py  test_spinnaker.launch
spinnaker_camera_driver/params/: analyzer.yml
spinnaker_camera_driver/rviz/: cam_test.rviz  stereo_cam_test.rviz
spinnaker_camera_driver/scripts/: linux_setup_flir  linux_setup_flir.sh
spinnaker_camera_driver/src/: FlirCamera.cpp  SpinnakerCamera.cpp  camera.cpp  camera_driver.cpp  camera_driver_node.cpp  cm3.cpp  diagnostics.cpp  genicam_utils.cpp  genicam_utils.hpp  gh3.cpp  image.cpp  node.cpp  nodelet.cpp  pixel_format.cpp  spinnaker_test_node.cpp  spinnaker_wrapper.cpp  spinnaker_wrapper_impl.cpp  spinnaker_wrapper_impl.hpp  stereo_calibrate.sh  stereo_image_proc.sh  stereo_image_view.sh  stereo_node.cpp  stereonodelet.cpp
spinnaker_synchronized_camera_driver/: .clang-format  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
spinnaker_synchronized_camera_driver/cmake/: FindSPINNAKER.cmake
spinnaker_synchronized_camera_driver/launch/: synchronized_driver_node.launch.py
spinnaker_synchronized_camera_driver/src/: exposure_controller_factory.cpp  individual_exposure_controller.cpp  synchronized_camera_driver.cpp  synchronized_camera_driver_node.cpp  time_estimator.cpp  time_keeper.cpp
(+37 files in other folders)
