<?xml version="1.0"?>
<package format="2">
  <name>flir_camera_driver</name>
  <version>0.0.0</version>
  <description>Flir camera driver based on Spinnaker.</description>

  <maintainer email="mhosmar@clearpathrobotics.com">Mike Hosmar</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/flir_camera_driver</url>

  <author>Chad Rockey</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>curl</build_depend>  <!-- to get ca-certificates for downloading Spinnaker -->
  <build_depend>dpkg</build_depend>  <!-- for unpacking Spinnaker debs -->

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>sensor_msgs</depend>
  <depend>wfov_camera_msgs</depend>
  <depend>image_exposure_msgs</depend>
  <depend>camera_info_manager</depend>
  <depend>image_transport</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>diagnostic_updater</depend>

  <!-- Dependencies of libSpinnaker -->
  <depend>libusb-1.0-dev</depend>

  <exec_depend>image_proc</exec_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>roslint</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
