<?xml version="1.0"?>
<!--
Software License Agreement (BSD)

\file      package.xml
\authors   Michael Hosmar <mhosmar@clearpathrobotics.com>
\copyright Copyright (c) 2018, Clearpath Robotics, Inc., All rights reserved.

Redistribution and use in source and binary forms, with or without modification, are permitted provided that
the following conditions are met:
 * Redistributions of source code must retain the above copyright notice, this list of conditions and the
   following disclaimer.
 * Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the
   following disclaimer in the documentation and/or other materials provided with the distribution.
 * Neither the name of Clearpath Robotics nor the names of its contributors may be used to endorse or promote
   products derived from this software without specific prior written permission.

THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WAR-
RANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, IN-
DIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT
OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-->
<package format="2">
  <name>spinnaker_camera_driver</name>
  <version>0.2.3</version>
  <description>Spinnaker camera driver based on Spinnaker.</description>

  <maintainer email="mhosmar@clearpathrobotics.com">Mike Hosmar</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/spinnaker_camera_driver</url>

  <author>Chad Rockey</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>curl</build_depend>  <!-- to get ca-certificates for downloading Spinnaker -->
  <build_depend>dpkg</build_depend>  <!-- for unpacking Spinnaker debs -->

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>sensor_msgs</depend>
  <depend>wfov_camera_msgs</depend>
  <depend>image_exposure_msgs</depend>
  <depend>camera_info_manager</depend>
  <depend>image_transport</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>diagnostic_updater</depend>

  <!-- Dependencies of libSpinnaker -->
  <depend>libusb-1.0-dev</depend>

  <exec_depend>image_proc</exec_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>roslint</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
