<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spinnaker_camera_driver</name>
  <version>2.0.7</version>
  <description>ROS2 driver for flir spinnaker sdk</description>
  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>
  <license>Apache-2</license>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>python3-distro</build_depend>  <!-- to get lsb_release for downloading Spinnaker -->
  <build_depend>curl</build_depend>  <!-- to get ca-certificates for downloading Spinnaker -->
  <build_depend>dpkg</build_depend>  <!-- for unpacking Spinnaker debs  -->

  <depend>libusb-1.0-dev</depend> <!-- spinnaker dependency -->
  <depend>ffmpeg</depend> <!-- spinnaker dependency -->

  <depend>yaml-cpp</depend> <!-- parameter definition file parsing -->

  <depend>camera_info_manager</depend>
  <depend>flir_camera_msgs</depend>
  <depend>image_transport</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
